// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Symbol.svelte > should render default circle. 1`] = `
<body>
  <div>
    <path
      d="M 0 100 A 100 100 0 0 0 200 100 A 100 100 0 0 0 0 100"
      fill="currentColor"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-10,-10)"
    />
    
  </div>
</body>
`;

exports[`Symbol.svelte > should render symbol provided 1`] = `
<body>
  <div>
    <polygon
      fill="currentColor"
      points="0, -10, 8.660254037844386, 5, -8.660254037844386, 5"
      role="button"
      stroke="currentColor"
      tabindex="0"
    />
    
  </div>
</body>
`;

exports[`Symbol.svelte > should render using path when component is not provided 1`] = `
<body>
  <div>
    <path
      d="M 100 0 L 200 200 L 0 200 Z"
      fill="currentColor"
      fill-rule="evenodd"
      role="button"
      stroke="currentColor"
      stroke-width="0.5"
      tabindex="0"
      transform="translate(-10,-10)"
    />
    
  </div>
</body>
`;
